# fiona-ros

./: .travis.yml  BUILDING.md  LICENSE  README.md  TESTING.md
SPARKS/ROSAnimationSpark/: Animation_srv.h  Animation_srvRequest.h  Animation_srvResponse.h  ROSAnimationSpark.cpp  ROSAnimationSpark.h
SPARKS/ROSApplicationSpark/: Application_srv.h  Application_srvRequest.h  Application_srvResponse.h  ROSApplicationSpark.cpp  ROSApplicationSpark.h
SPARKS/ROSAsyncFatalErrorHandlerSpark/: AsyncFatalErrorHandler_srv.h  AsyncFatalErrorHandler_srvRequest.h  AsyncFatalErrorHandler_srvResponse.h  ROSAsyncFatalErrorHandlerSpark.cpp  ROSAsyncFatalErrorHandlerSpark.h
SPARKS/ROSAudioQueueSpark/: AudioBuffer_srv.h  AudioBuffer_srvRequest.h  AudioBuffer_srvResponse.h  AudioSize_srv.h  AudioSize_srvRequest.h  AudioSize_srvResponse.h  ROSDequeueAudioBufferSpark.cpp  ROSDequeueAudioBufferSpark.h  ROSGetStoredAudioSizeSpark.h  ROSQueueAudioBufferSpark.cpp  ROSQueueAudioBufferSpark.h
SPARKS/ROSAudioSpark/: .ROSAudioBufferSpark.h.swp  .ROSGetStoredAudioSizeSpark.h.swp  ROSAudioBufferSpark.cpp  ROSAudioBufferSpark.h  ROSGetStoredAudioSizeSpark.cpp
SPARKS/ROSCameraSpark/: CameraParameters_srv.h  CameraParameters_srvRequest.h  CameraParameters_srvResponse.h  CameraPosition_srv.h  CameraPosition_srvRequest.h  (+10 more)
fiona_pkg/: CMakeLists.txt  info.txt  package.xml
fiona_pkg/launch/: animation.launch  application.launch  audiobuffer.launch  audiosize.launch  cameraparameters.launch  cameraposition.launch  camerarotation.launch  concurrent.launch  controlvoice.launch  errorhandler.launch  eyes.launch  faceexpression.launch  faceposition.launch  fiona.launch  frame.launch  neck.launch  render.launch  threadproc.launch  voice.launch  window.launch  windowcolordepth.launch
fiona_pkg/msg/: Animation_msg.msg  Application_msg.msg  AsyncFatalErrorHandler_msg.msg  AudioBuffer_msg.msg  AudioSize_msg.msg  CameraParameters_msg.msg  CameraPosition_msg.msg  CameraRotation_msg.msg  Concurrent_msg.msg  ControlVoice_msg.msg  DetectedFacePositionConsumer_msg.msg  Eyes_msg.msg  FaceExpression_msg.msg  FrameEventSubscriber_msg.msg  Neck_msg.msg  Renderizable_msg.msg  ThreadProc_msg.msg  Voice_msg.msg  WindowColorDepth_msg.msg  Window_msg.msg
fiona_pkg/src/: .fiona_talker.cpp.swp  fiona_animation_client.cpp  fiona_animation_server.cpp  fiona_application_client.cpp  fiona_application_server.cpp  fiona_audiobuffer_client.cpp  fiona_audiobuffer_server.cpp  fiona_audiosize_client.cpp  fiona_audiosize_server.cpp  fiona_cameraparameters_client.cpp  fiona_cameraparameters_server.cpp  fiona_cameraposition_client.cpp  fiona_cameraposition_server.cpp  fiona_camerarotation_client.cpp  fiona_camerarotation_server.cpp  fiona_client.cpp  fiona_concurrent_client.cpp  fiona_concurrent_server.cpp  fiona_controlvoice_client.cpp  fiona_controlvoice_server.cpp  fiona_errorhandler_client.cpp  fiona_errorhandler_server.cpp  fiona_eyes_client.cpp  fiona_eyes_server.cpp  fiona_faceexpression_client.cpp  fiona_faceexpression_server.cpp  fiona_faceposition_client.cpp  fiona_faceposition_server.cpp  fiona_frame_client.cpp  fiona_frame_server.cpp  fiona_listener.cpp  fiona_neck_client.cpp  fiona_neck_server.cpp  fiona_render_client.cpp  fiona_render_server.cpp  fiona_server.cpp  fiona_talker.cpp  fiona_threadproc_client.cpp  fiona_threadproc_server.cpp  fiona_voice_client.cpp  (+5 more)
fiona_pkg/srv/: .Application_srv.srv.swp  .AudioSize_srv.srv.swp  .CameraParameters_srv.srv.swp  .CameraRotation_srv.srv.swp  .Concurrent_srv.srv.swp  .ControlVoice_srv.srv.swp  .WindowColorDepth_srv.srv.swp  Application_srv.srv  AsyncFatalErrorHandler_srv.srv  AudioBuffer_srv.srv  CameraParameters_srv.srv  ControlVoice_srv.srv  DetectedFacePositionConsumer_srv.srv  Eyes_srv.srv  FrameEventSubscriber_srv.srv  ThreadProc_srv.srv  Voice_srv.srv  WindowColorDepth_srv.srv  Window_srv.srv  fiona_srv.srv
fiona_pkg/tests/: .test_animation.cpp.swp  test_animation.cpp  test_animation.launch  test_application.cpp  test_application.launch  test_audiobuffer.cpp  test_audiobuffer.launch  test_audiosize.cpp  test_audiosize.launch  test_cameraparameters.cpp  test_cameraparameters.launch  test_cameraposition.cpp  test_cameraposition.launch  test_camerarotation.cpp  test_camerarotation.launch  test_concurrent.cpp  test_concurrent.launch  test_controlvoice.cpp  test_controlvoice.launch  test_errorhandler.cpp  test_errorhandler.launch  test_eyes.cpp  test_eyes.launch  test_faceexpression.cpp  test_faceexpression.launch  test_faceposition.cpp  test_faceposition.launch  test_frame.cpp  test_frame.launch  test_listener.cpp  test_listener.launch  test_neck.cpp  test_neck.launch  test_render.cpp  test_render.launch  test_threadproc.cpp  test_threadproc.launch  test_voice.cpp  test_voice.launch  test_window.cpp  (+3 more)
rostest_results/: rostest-tests_test_animation.xml  rostest-tests_test_application.xml  rostest-tests_test_audiobuffer.xml  rostest-tests_test_audiosize.xml  rostest-tests_test_cameraparameters.xml  rostest-tests_test_cameraposition.xml  rostest-tests_test_camerarotation.xml  rostest-tests_test_concurrent.xml  rostest-tests_test_controlvoice.xml  rostest-tests_test_errorhandler.xml  rostest-tests_test_eyes.xml  rostest-tests_test_faceexpression.xml  rostest-tests_test_faceposition.xml  rostest-tests_test_frame.xml  rostest-tests_test_listener.xml  rostest-tests_test_neck.xml  rostest-tests_test_render.xml  rostest-tests_test_threadproc.xml  rostest-tests_test_voice.xml  rostest-tests_test_window.xml  rostest-tests_test_windowcolordepth.xml  rosunit-test_animation.xml  rosunit-test_application.xml  rosunit-test_audiobuffer.xml  rosunit-test_audiosize.xml  rosunit-test_cameraparameters.xml  rosunit-test_cameraposition.xml  rosunit-test_camerarotation.xml  rosunit-test_concurrent.xml  rosunit-test_controlvoice.xml  rosunit-test_errorhandler.xml  rosunit-test_eyes.xml  rosunit-test_faceexpression.xml  rosunit-test_faceposition.xml  rosunit-test_frame.xml  rosunit-test_listener.xml  rosunit-test_neck.xml  rosunit-test_render.xml  rosunit-test_threadproc.xml  rosunit-test_voice.xml  (+2 more)
(+92 files in other folders)
