<?xml version="1.0"?>
<package format="2">
  <name>fiona_pkg</name>
  <version>0.0.0</version>
  <description>FIONA package</description>

  <maintainer email="raquel.suarez@adlrbts.com">Raquel</maintainer>

  <license>Apache 2.0</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rostest</exec_depend>


  <export>
  </export>
</package>

